# realtime-voice-assistant

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/llm/: client.py  conversation.py
app/stt/: engine.py
app/tts/: base.py  factory.py  piper_engine.py
static/: index.html
tests/: test_llm.py  test_pipeline.py  test_stt.py  test_tts.py
