[project]
name = "realtime-voice-assistant"
version = "0.1.0"
description = "Conversational real-time voice assistant — STT + LLM + TTS over WebSocket"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.3",
    "structlog>=24.4.0",
    "anthropic>=0.28.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that download or run real ML models (excluded from CI)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
